--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "example": "example"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "supervisor server.js"
   },
   "author": "David Guttman <david@guttman.io> (http://davidguttman.com/)",
   "license": "MIT",
   "dependencies": {
+    "corsify": "^2.0.0",
+    "routes-router": "^4.1.2",
+    "send-data": "^3.3.4",
     "y-options": "^2.0.0"
   },
   "devDependencies": {
+    "supervisor": "^0.6.0",
     "tablify": "^0.1.5",
     "underscore": "^1.7.0"
   }
