--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "corsify": "^2.0.0",
+    "lru-cache": "^2.5.0",
     "routes-router": "^4.1.2",
     "send-data": "^3.3.4",
     "y-options": "^2.0.0"
